# async-ior

./: .gitmodules  Cargo.toml  README.md
crates/ior-backend-benchfs/: Cargo.toml  build.rs
crates/ior-backend-benchfs/src/: ffi.rs  lib.rs
crates/ior-backend-chfs/: Cargo.toml  build.rs
crates/ior-backend-chfs/src/: ffi.rs  lib.rs
crates/ior-backend-posix/: Cargo.toml
crates/ior-backend-posix/src/: lib.rs
crates/ior-bench/: Cargo.toml
crates/ior-bench/src/: cli.rs  json_output.rs  main.rs  report.rs  runner.rs
crates/ior-core/: Cargo.toml
crates/ior-core/src/: aiori.rs  aligned_buf.rs  backend_options.rs  data_pattern.rs  error.rs  ffi.rs  handle.rs  lib.rs  params.rs  timer.rs
crates/mdtest-bench/: Cargo.toml
crates/mdtest-bench/src/: cli.rs  json_output.rs  main.rs  params.rs  report.rs  runner.rs  tree.rs
docs/: usage.md
