[workspace]
resolver = "3"
members = ["crates/ior-core", "crates/ior-backend-posix", "crates/ior-backend-benchfs", "crates/ior-backend-chfs", "crates/ior-bench", "crates/mdtest-bench"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
ior-core = { path = "crates/ior-core" }
ior-backend-posix = { path = "crates/ior-backend-posix" }
ior-backend-benchfs = { path = "crates/ior-backend-benchfs" }
ior-backend-chfs = { path = "crates/ior-backend-chfs" }
libc = "0.2"
bitflags = "2"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
mpi = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
