[package]
name = "ior-bench"
version.workspace = true
edition.workspace = true

[dependencies]
ior-core = { workspace = true }
ior-backend-posix = { workspace = true }
clap = { workspace = true }
mpi = { workspace = true }
libc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
